--- a/src/components/NestedNav/NestedNavItem.module.scss
+++ b/src/components/NestedNav/NestedNavItem.module.scss
@@ -5,6 +5,7 @@
   border: 1px solid white;
   border-radius: 5px;
   padding: 6px;
+  width: fit-content;
   cursor: pointer;
   white-space: nowrap;
 
