--- a/src/components/YTDeeplink/UserDeeplink.module.scss
+++ b/src/components/YTDeeplink/UserDeeplink.module.scss
@@ -36,6 +36,9 @@
     padding: 6px;
     color: black;
     border-radius: 6px;
+    margin: 10px 0;
+    font-size: 12px;
+    margin-right: 4px;
   }
   img {
     height: 32px;
